--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -24,6 +24,13 @@
         background-color: #f2f2f2;
       }
       .card-body{
+        .card-title{
+          font-family: "Flexo-Demi", arial, sans-serif;
+          color: #313131;
+          text-transform: none;
+          font-size: 145%;
+          margin-bottom: 5px;
+        }
         .card-id{
           color: rgba(0, 0, 0, 0.544);
           font-size: 18px;
@@ -38,6 +45,9 @@
           gap: 30px;
           h5{
             margin-bottom: 0px;
+            padding: 10px;
+            border-radius: 1vh;
+            color:white;
           }
         }
       }
