Add funtionality in input searcher in home component and nav

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -3,6 +3,6 @@
     <img src="../../../assets/images/Pokemon-logo.png" alt="pokemonLogo">
   </div>
   <div class="container-search" >
-    <input type="text" placeholder="Search your pokemon">
+    <input type="text" (input)="setSearchText($event)" placeholder="Search your pokemon">
   </div>
 </div>
