--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -5,4 +5,12 @@
   <div class="container-search" >
     <input type="text" (input)="setSearchText($event)" placeholder="Search your pokemon">
   </div>
+  <div class="container-select">
+    <select [(ngModel)]="pokemonType" (change)="selectType($event)" id="pokemon-type">
+      <option value="">Select type</option>
+      @for (item of type; track $index) {
+        <option [value]="item">{{item}}</option>
+      }
+    </select>
+  </div>
 </div>
