--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
 <div class="container-all">
-  <div class="container-cards">
+  <div id="cards-container" class="container-cards">
     @for (item of filteredPokemons; track $index) {
       <div class="card" style="width: 18rem;">
         <div class="image">
@@ -9,8 +9,9 @@
         <div class="card-body">
           <h5 class="card-title card-id">#{{item.id| number:'3.0-5'}}</h5>
           <h5 class="card-title">{{item.name}}</h5>
-          <div class="card-type">
-            @for (item2 of item.type; track $index) {
+          <div class="card-type"
+          >
+            @for (item2 of item.types; track $index) {
               <!-- <h5 class="card-text" [ngStyle]="{ 'background-color': getColorType(item2.type.name) }">{{item2.type.name}}</h5> -->
               <h5 class="card-text" [ngStyle]="{ 'background-color': getColorType(item2.type.name)}">{{ item2.type.name }} </h5>
             }
