--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,3 +1,8 @@
+
+.search-results {
+  height: 20rem;
+  overflow: scroll;
+}
 .container-all {
   width: 100%;
   height: 100%;
@@ -8,12 +13,15 @@
 
   .container-cards {
     padding: 30px;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 20px;
     width: 90%;
-    min-height: 92vh;
+    height: 92vh;
     background-color: #ffff;
+    overflow: scroll;
+
 
     .card {
       border: none;
