--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="container-nav">
   <div class="image">
-    <img src="../../../assets/images/Pokemon-logo.png" alt="pokemonLogo">
+    <img style="width:80px;" src="../../../assets/images/Pokemon-logo.png" alt="pokemonLogo">
   </div>
   <div class="container-search" >
     <input type="text" (input)="setSearchText($event)" placeholder="Search your pokemon">
