--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -5,13 +5,16 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 20px;
   .image{
     width: 10%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 20%;
+    p{
+     display:non;
+    }
     img{
       width: 50px;
       height: 50px;
